Changelog:
Versions without changelogs probably had very small misc fixes, like tweaks to the source code

Key:
  + Addition
  = Fix
  ! Change
  - Removal

Version 2.1.0
 + Prevented exploits involving blocks made from entities (snowmen, etc..)
 + Added JSON integration to all Skill Commands
 + Added config setting to enable or disable old mcMMO skill scaling (General.RetroMode) this is on by default for existing installs
 + You can now disable specific skills in coreskills.yml without the need for permissions
 + Added links to mcMMO related websites to various commands
 + Certain elements of mcMMO's UI have been restyled
 + Added the tagline "Overhaul Era" to various locations until 3.0.0 comes out
 + (Experience) Coral (blocks) now give Mining XP
 + (Experience) Coral (plants) now give Herbalism XP
 + (Experience) Blue Ice now gives Mining XP
 + (Experience) Dolphins now give combat XP
 + (Experience) Drowned mobs now count towards combat XP
 + (Experience) You can now set guaranteed minimum values for XP gained if diminishing returns are enabled, this value defaults to 5% (experience.yml)
 + (Events) Starting an XP event will now use the title API (toggle this in advanced.yml)
 + (Sound) Volume and Pitch of sounds can now be configured in the new sounds.yml file
 + (MySQL) Added support for SSL for MySQL/MariaDB (On by default)
 + (Skills) Added a new subskill to some skills 'Understanding The Art' this adds nothing new, but tracks benefits that increase together that seemed unrelated, which was previously a bit obfuscated.
 + (Skills) Tool alerts now are sent to the Action Bar
 + (Skills) Super Ability activation alerts are now sent to the Action Bar
 + (Skills) Certain Skill messages are now sent to the Action Bar
 + (Config) Skill Rank requirements are now defined in skillranks.yml you cannot add or remove ranks from this file
 + (Config) Added option to use SSL for MySQL in config.yml
 + (Config) Added option to disable the new URL links to config.yml