@@ -8,6 +8,7 @@ Key:
   - Removal
 
 Version 2.1.0
+ + mcMMO now features XP bars! Configurable in experience.yml
  + Prevented exploits involving blocks made from entities (snowmen, etc..)
  + Added JSON integration to all Skill Commands
  + Added config setting to enable or disable old mcMMO skill scaling (General.RetroMode) this is on by default for existing installs
